<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/applicationEnvironmentTitle"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:text="@string/ApplicationUIDTitle" />

            <TextView
                android:id="@+id/txtApplicationUID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@android:string/unknownName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:text="@string/applicationStatusTitle" />

            <TextView
                android:id="@+id/txtApplicationStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DefaultServiceStatus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:text="@string/ServiceStatusTitle" />

            <TextView
                android:id="@+id/txtServiceStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DefaultServiceStatus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:text="@string/remoteServerStatusTitle" />

            <TextView
                android:id="@+id/txtRemoteServerStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/statusOffline" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="10dp"
            android:text="@string/wifiScanTitle"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:text="@string/collectedDataTitle" />

            <TextView
                android:id="@+id/txtWifiCollectedData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@android:string/unknownName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:text="@string/dataSentTitle" />

            <TextView
                android:id="@+id/txtWifiDataSent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@android:string/unknownName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:text="@string/scannedAccessPointsTitle" />

            <TextView
                android:id="@+id/txtWifiScannedAccessPoints"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@android:string/unknownName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:text="@string/countScannedHoursTitle" />

            <TextView
                android:id="@+id/txtWifiCountHours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@android:string/unknownName" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="10dp"
            android:text="@string/bluetoothScanTitle"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:text="@string/collectedDataTitle" />

            <TextView
                android:id="@+id/txtBluetoothCollectedData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@android:string/unknownName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:text="@string/dataSentTitle" />

            <TextView
                android:id="@+id/txtBluetoothDataSent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@android:string/unknownName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:text="@string/scannedAccessPointsTitle" />

            <TextView
                android:id="@+id/txtBluetoothScannedAccessPoints"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@android:string/unknownName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:text="@string/countScannedHoursTitle" />

            <TextView
                android:id="@+id/txtBluetoothCountHours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@android:string/unknownName" />
        </LinearLayout>

        <Button
            android:id="@+id/btnStartService"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/startStopService" />

        <Button
            android:id="@+id/btnBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/back" />
    </LinearLayout>

</ScrollView>